--- a/ProjektPAD/MainWindow.xaml
+++ b/ProjektPAD/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button Content="Nowe" HorizontalAlignment="Left" VerticalAlignment="Top" Width="792" Click="NewWindow" Height="62"/>
         <Button Content="Podglad" HorizontalAlignment="Left" Margin="0,62,0,0" VerticalAlignment="Top" Width="792" RenderTransformOrigin="-0.545,-2.347" Height="66"/>
-        <Button Content="Wyszukaj" HorizontalAlignment="Left" Margin="0,128,0,0" VerticalAlignment="Top" Width="792" Height="59"/>
+        <Button Content="Wyszukaj" HorizontalAlignment="Left" Margin="0,128,0,0" VerticalAlignment="Top" Width="792" Height="59" Click="Wyszukaj"/>
         <Button Content="Wyjscie" HorizontalAlignment="Left" Margin="0,187,0,0" VerticalAlignment="Top" Width="792" Click="Close" Height="58"/>
 
     </Grid>
